--- a/Test Rosenbrock Easy.ipynb
+++ b/Test Rosenbrock Easy.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [09:59<00:00,  1.67it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [09:39<00:00,  1.73it/s]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.594587               0.0      0.598163\n",
-      "std       2.217007               0.0      0.394563\n",
-      "min       0.000007               0.0      0.121589\n",
-      "25%       0.125986               0.0      0.347632\n",
-      "50%       0.657168               0.0      0.683171\n",
-      "75%       2.053709               0.0      0.793600\n",
-      "max      11.428561               0.0      9.541309\n",
+      "mean      1.594587               0.0      0.578363\n",
+      "std       2.217007               0.0      0.391875\n",
+      "min       0.000007               0.0      0.123029\n",
+      "25%       0.125986               0.0      0.340683\n",
+      "50%       0.657168               0.0      0.682500\n",
+      "75%       2.053709               0.0      0.792981\n",
+      "max      11.428561               0.0      9.562252\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -190,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:16<00:00, 13.13it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:10<00:00, 14.26it/s]\n"
      ]
     },
     {
@@ -199,13 +199,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean    115.844676               0.0      0.075645\n",
-      "std      73.526664               0.0      0.033788\n",
-      "min       7.219464               0.0      0.054559\n",
-      "25%      50.514805               0.0      0.061570\n",
-      "50%     115.428330               0.0      0.062481\n",
-      "75%     150.220972               0.0      0.064388\n",
-      "max     498.093084               0.0      0.200672\n",
+      "mean    115.844676               0.0      0.069636\n",
+      "std      73.526664               0.0      0.027487\n",
+      "min       7.219464               0.0      0.057629\n",
+      "25%      50.514805               0.0      0.061235\n",
+      "50%     115.428330               0.0      0.062063\n",
+      "75%     150.220972               0.0      0.062890\n",
+      "max     498.093084               0.0      0.173431\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -245,11 +245,11 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "penalty_weight = 50   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
-    "hsize = 32            # width of hidden layers for solution mapping\n",
-    "lr = 1e-2             # learning rate\n",
+    "hsize = 64            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate\n",
     "batch_size = 64       # batch size"
    ]
   },
@@ -275,8 +275,8 @@
     "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
     "# define rounding model\n",
     "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks)\n",
-    "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x\"],\n",
-    "                       output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], \n",
+    "                       int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = [smap, rnd]\n",
     "loss = nm.loss.PenaltyLoss(obj_rnd, constrs_rnd)\n",
@@ -293,49 +293,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 129.58692932128906\n",
-      "epoch: 1  train_loss: 33.856361389160156\n",
-      "epoch: 2  train_loss: 30.80262565612793\n",
-      "epoch: 3  train_loss: 30.805721282958984\n",
-      "epoch: 4  train_loss: 31.48659896850586\n",
-      "epoch: 5  train_loss: 29.961790084838867\n",
-      "epoch: 6  train_loss: 30.889585494995117\n",
-      "epoch: 7  train_loss: 28.589134216308594\n",
-      "epoch: 8  train_loss: 28.890409469604492\n",
-      "epoch: 9  train_loss: 29.232967376708984\n",
-      "epoch: 10  train_loss: 30.297016143798828\n",
-      "epoch: 11  train_loss: 30.05661392211914\n",
-      "epoch: 12  train_loss: 31.33413314819336\n",
-      "epoch: 13  train_loss: 25.79875373840332\n",
-      "epoch: 14  train_loss: 29.66762924194336\n",
-      "epoch: 15  train_loss: 26.024311065673828\n",
-      "epoch: 16  train_loss: 28.986616134643555\n",
-      "epoch: 17  train_loss: 25.135225296020508\n",
-      "epoch: 18  train_loss: 28.54763412475586\n",
-      "epoch: 19  train_loss: 28.059417724609375\n",
-      "epoch: 20  train_loss: 26.936077117919922\n",
-      "epoch: 21  train_loss: 27.704675674438477\n",
-      "epoch: 22  train_loss: 26.98264503479004\n",
-      "epoch: 23  train_loss: 28.034683227539062\n",
-      "epoch: 24  train_loss: 28.4895076751709\n",
-      "epoch: 25  train_loss: 30.58291244506836\n",
-      "epoch: 26  train_loss: 27.60063362121582\n",
-      "epoch: 27  train_loss: 28.916051864624023\n",
-      "epoch: 28  train_loss: 26.429208755493164\n",
-      "epoch: 29  train_loss: 26.589305877685547\n",
-      "epoch: 30  train_loss: 31.10584259033203\n",
-      "epoch: 31  train_loss: 24.959896087646484\n",
-      "epoch: 32  train_loss: 24.495525360107422\n",
-      "epoch: 33  train_loss: 27.958023071289062\n",
-      "epoch: 34  train_loss: 26.205522537231445\n",
-      "epoch: 35  train_loss: 28.200702667236328\n",
-      "epoch: 36  train_loss: 27.59317398071289\n",
-      "epoch: 37  train_loss: 24.588481903076172\n",
-      "epoch: 38  train_loss: 25.02332878112793\n",
-      "epoch: 39  train_loss: 29.11504554748535\n",
-      "epoch: 40  train_loss: 26.435565948486328\n",
-      "epoch: 41  train_loss: 27.431293487548828\n",
-      "epoch: 42  train_loss: 26.830503463745117\n",
+      "epoch: 0  train_loss: 95.85124969482422\n",
+      "epoch: 1  train_loss: 42.44343566894531\n",
+      "epoch: 2  train_loss: 25.290496826171875\n",
+      "epoch: 3  train_loss: 20.769079208374023\n",
+      "epoch: 4  train_loss: 16.677532196044922\n",
+      "epoch: 5  train_loss: 13.803874969482422\n",
+      "epoch: 6  train_loss: 12.086336135864258\n",
+      "epoch: 7  train_loss: 11.66338062286377\n",
+      "epoch: 8  train_loss: 10.4960298538208\n",
+      "epoch: 9  train_loss: 10.98294734954834\n",
+      "epoch: 10  train_loss: 8.142115592956543\n",
+      "epoch: 11  train_loss: 8.359756469726562\n",
+      "epoch: 12  train_loss: 7.7702460289001465\n",
+      "epoch: 13  train_loss: 8.44222640991211\n",
+      "epoch: 14  train_loss: 7.556789398193359\n",
+      "epoch: 15  train_loss: 7.439353942871094\n",
+      "epoch: 16  train_loss: 7.1674017906188965\n",
+      "epoch: 17  train_loss: 6.830772399902344\n",
+      "epoch: 18  train_loss: 8.747583389282227\n",
+      "epoch: 19  train_loss: 6.925155162811279\n",
+      "epoch: 20  train_loss: 6.86478328704834\n",
+      "epoch: 21  train_loss: 7.603288173675537\n",
+      "epoch: 22  train_loss: 7.196815013885498\n",
+      "epoch: 23  train_loss: 7.291717052459717\n",
+      "epoch: 24  train_loss: 7.589517593383789\n",
+      "epoch: 25  train_loss: 7.982796669006348\n",
+      "epoch: 26  train_loss: 7.693236827850342\n",
+      "epoch: 27  train_loss: 7.8371782302856445\n",
+      "epoch: 28  train_loss: 7.373791217803955\n",
+      "epoch: 29  train_loss: 7.690060138702393\n",
+      "epoch: 30  train_loss: 7.985922336578369\n",
+      "epoch: 31  train_loss: 6.647568702697754\n",
+      "epoch: 32  train_loss: 7.068371772766113\n",
+      "epoch: 33  train_loss: 7.603843688964844\n",
+      "epoch: 34  train_loss: 7.685616493225098\n",
+      "epoch: 35  train_loss: 7.382946491241455\n",
+      "epoch: 36  train_loss: 8.036613464355469\n",
+      "epoch: 37  train_loss: 7.199586391448975\n",
+      "epoch: 38  train_loss: 7.261413097381592\n",
+      "epoch: 39  train_loss: 6.5884809494018555\n",
+      "epoch: 40  train_loss: 7.491424083709717\n",
+      "epoch: 41  train_loss: 7.479515552520752\n",
       "Early stopping!!!\n"
      ]
     },
@@ -375,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 367.92it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 395.28it/s]\n"
      ]
     },
     {
@@ -384,14 +383,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     20.799477          0.000798      0.002390\n",
-      "std      10.376739          0.007790      0.000651\n",
-      "min       2.955171          0.000000      0.000998\n",
-      "25%      11.987385          0.000000      0.002000\n",
-      "50%      19.460208          0.000000      0.002013\n",
-      "75%      28.827268          0.000000      0.002999\n",
-      "max      49.042802          0.132131      0.004759\n",
-      "Number of infeasible solution: 18\n"
+      "mean      4.408696          0.000151      0.002232\n",
+      "std       4.630498          0.002502      0.000637\n",
+      "min       0.018090          0.000000      0.000997\n",
+      "25%       1.199869          0.000000      0.002000\n",
+      "50%       2.534193          0.000000      0.002001\n",
+      "75%       6.262805          0.000000      0.002511\n",
+      "max      35.863158          0.064772      0.004999\n",
+      "Number of infeasible solution: 7\n"
      ]
     }
    ],
