--- a/Test Rosenbrock Easy.ipynb
+++ b/Test Rosenbrock Easy.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [09:37<00:00,  1.73it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [13:29<00:00,  1.24it/s]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.594587               0.0      0.576719\n",
-      "std       2.217007               0.0      0.382313\n",
-      "min       0.000007               0.0      0.121909\n",
-      "25%       0.125986               0.0      0.341635\n",
-      "50%       0.657168               0.0      0.682711\n",
-      "75%       2.053709               0.0      0.792105\n",
-      "max      11.428561               0.0      9.228859\n",
+      "mean      1.594587               0.0      0.808459\n",
+      "std       2.217007               0.0      1.957424\n",
+      "min       0.000007               0.0      0.120016\n",
+      "25%       0.125986               0.0      0.419403\n",
+      "50%       0.657168               0.0      0.792053\n",
+      "75%       2.053709               0.0      0.905938\n",
+      "max      11.428561               0.0     59.568891\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -164,25 +164,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
+   "id": "28b8053d-2fb9-419e-ab27-56d35a7310c2",
    "metadata": {},
    "source": [
-    "## Heuristic"
+    "## Heuristic - Round"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
+   "id": "8ac297ea-1ea4-4368-bbcf-e64f185397da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_heur = model.first_solution_heuristic()"
+    "from src.heuristic import naive_round\n",
+    "model_rel = model.relax()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "317ca34b-ef96-4149-9354-cc76439f4713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [15:23<00:00,  1.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     10.249950          1.643447      0.922508\n",
+      "std       4.410839          1.653718      0.152595\n",
+      "min       1.965021          0.000000      0.402852\n",
+      "25%       6.754050          0.065237      0.797720\n",
+      "50%       9.723916          1.157247      0.906428\n",
+      "75%      13.284659          2.744793      1.015326\n",
+      "max      21.724260          5.862677      1.445920\n",
+      "Number of infeasible solution: 886\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    model_rel.set_param_val({\"p\":p, \"a\":a})\n",
+    "    tick = time.time()\n",
+    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    tock = time.time()\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_heur_rnd_e.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
+   "metadata": {},
+   "source": [
+    "## Heuristic - N1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_heur = model.first_solution_heuristic(nodes_limit=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "f4c7fc52-cbbc-4414-bf1d-316d65c8db5b",
    "metadata": {},
    "outputs": [
@@ -190,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:11<00:00, 14.00it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:11<00:00, 13.89it/s]\n"
      ]
     },
     {
@@ -199,13 +268,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean    115.844676               0.0      0.070972\n",
-      "std      73.526664               0.0      0.029045\n",
-      "min       7.219464               0.0      0.058736\n",
-      "25%      50.514805               0.0      0.061393\n",
-      "50%     115.428330               0.0      0.062104\n",
-      "75%     150.220972               0.0      0.063072\n",
-      "max     498.093084               0.0      0.186486\n",
+      "mean    115.844676               0.0      0.071445\n",
+      "std      73.526664               0.0      0.026859\n",
+      "min       7.219464               0.0      0.056119\n",
+      "25%      50.514805               0.0      0.061333\n",
+      "50%     115.428330               0.0      0.062303\n",
+      "75%     150.220972               0.0      0.064135\n",
+      "max     498.093084               0.0      0.188381\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -226,7 +295,74 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_e.csv\")"
+    "df.to_csv(\"result/rb_heur_n1_e.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "054837a3-7281-4c11-a7c8-9ecae9ea40c7",
+   "metadata": {},
+   "source": [
+    "## Heuristic - N3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c3991fc7-8320-43ab-ac25-9bc8a6a759bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_heur = model.first_solution_heuristic(nodes_limit=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4d916e20-f807-4728-9a24-0af68258539f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [04:13<00:00,  3.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean      7.665065               0.0      0.252475\n",
+      "std      11.051759               0.0      0.502128\n",
+      "min       0.000007               0.0      0.059156\n",
+      "25%       0.420074               0.0      0.106874\n",
+      "50%       2.392478               0.0      0.188430\n",
+      "75%       9.561415               0.0      0.279285\n",
+      "max      57.349402               0.0     15.028886\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
+    "    tick = time.time()\n",
+    "    xval, objval = model_heur.solve(\"scip\")\n",
+    "    tock = time.time()\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(xval.values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model_heur.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_heur_n3_e.csv\")"
    ]
   },
   {
@@ -239,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -255,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -285,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -344,7 +480,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -374,7 +510,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 402.30it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 305.07it/s]\n"
      ]
     },
     {
@@ -383,13 +519,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      4.408696          0.000151      0.002177\n",
-      "std       4.630498          0.002502      0.000590\n",
-      "min       0.018090          0.000000      0.000954\n",
+      "mean      4.408696          0.000151      0.002855\n",
+      "std       4.630498          0.002502      0.001063\n",
+      "min       0.018090          0.000000      0.000991\n",
       "25%       1.199869          0.000000      0.002000\n",
-      "50%       2.534193          0.000000      0.002000\n",
-      "75%       6.262805          0.000000      0.002506\n",
-      "max      35.863158          0.064772      0.006000\n",
+      "50%       2.534193          0.000000      0.003000\n",
+      "75%       6.262805          0.000000      0.003567\n",
+      "max      35.863158          0.064772      0.009398\n",
       "Number of infeasible solution: 7\n"
      ]
     }
