Bug fixed: Rens

--- a/Test Rosenbrock Easy.ipynb
+++ b/Test Rosenbrock Easy.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [13:29<00:00,  1.24it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:50<00:00,  1.41it/s]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.594587               0.0      0.808459\n",
-      "std       2.217007               0.0      1.957424\n",
-      "min       0.000007               0.0      0.120016\n",
-      "25%       0.125986               0.0      0.419403\n",
-      "50%       0.657168               0.0      0.792053\n",
-      "75%       2.053709               0.0      0.905938\n",
-      "max      11.428561               0.0     59.568891\n",
+      "mean      1.594587               0.0      0.709301\n",
+      "std       2.217007               0.0      1.959245\n",
+      "min       0.000007               0.0      0.121832\n",
+      "25%       0.125986               0.0      0.375591\n",
+      "50%       0.657168               0.0      0.686886\n",
+      "75%       2.053709               0.0      0.799648\n",
+      "max      11.428561               0.0     60.681595\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -146,16 +146,19 @@
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    # set params\n",
     "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # solve\n",
     "    tick = time.time()\n",
     "    xval, objval = model.solve(\"scip\")\n",
     "    tock = time.time()\n",
+    "    # eval\n",
     "    params.append(list(p)+list(a))\n",
     "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
@@ -177,8 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.heuristic import naive_round\n",
-    "model_rel = model.relax()"
+    "from src.heuristic import naive_round"
    ]
   },
   {
@@ -191,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [15:23<00:00,  1.08it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [14:08<00:00,  1.18it/s]\n"
      ]
     },
     {
@@ -200,25 +202,30 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     10.249950          1.643447      0.922508\n",
-      "std       4.410839          1.653718      0.152595\n",
-      "min       1.965021          0.000000      0.402852\n",
-      "25%       6.754050          0.065237      0.797720\n",
-      "50%       9.723916          1.157247      0.906428\n",
-      "75%      13.284659          2.744793      1.015326\n",
-      "max      21.724260          5.862677      1.445920\n",
-      "Number of infeasible solution: 886\n"
+      "mean      5.655849          0.030167      0.844192\n",
+      "std       4.235613          0.096639      0.139216\n",
+      "min       0.001368          0.000000      0.337538\n",
+      "25%       2.058067          0.000000      0.790026\n",
+      "50%       4.906284          0.000000      0.895881\n",
+      "75%       8.731726          0.000000      0.906376\n",
+      "max      21.011748          0.485656      1.249418\n",
+      "Number of infeasible solution: 120\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test, a_test))):\n",
-    "    model_rel.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # set params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # relax\n",
+    "    model_rel = model.relax()\n",
+    "    # solve\n",
     "    tick = time.time()\n",
     "    xval_rel, _ = model_rel.solve(\"scip\")\n",
     "    xval, objval = naive_round(xval_rel, model)\n",
     "    tock = time.time()\n",
+    "    # eval\n",
     "    params.append(list(p)+list(a))\n",
     "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
@@ -233,6 +240,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39252c5b-845e-4ac3-817a-35732961069f",
+   "metadata": {},
+   "source": [
+    "## Heuristic - RENS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "992534ca-a00f-4d6d-b45f-ae8e15657948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.heuristic import rens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4e007de6-c08f-4e43-8d45-9001f99decb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [22:25<00:00,  1.35s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean      1.594587               0.0      1.341162\n",
+      "std       2.217007               0.0      0.224039\n",
+      "min       0.000007               0.0      0.636088\n",
+      "25%       0.125986               0.0      1.195489\n",
+      "50%       0.657168               0.0      1.322444\n",
+      "75%       2.053709               0.0      1.482356\n",
+      "max      11.428561               0.0      2.024685\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # set params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # relax\n",
+    "    model_rel = model.relax()\n",
+    "    # solve\n",
+    "    tick = time.time()\n",
+    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
+    "    xval, objval = rens(xval_rel, model)\n",
+    "    tock = time.time()\n",
+    "    # eval\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_heur_rens_e.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
    "metadata": {},
    "source": [
@@ -241,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
    "metadata": {},
    "outputs": [],
@@ -251,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f4c7fc52-cbbc-4414-bf1d-316d65c8db5b",
    "metadata": {},
    "outputs": [
@@ -259,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:11<00:00, 13.89it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:08<00:00, 14.63it/s]\n"
      ]
     },
     {
@@ -268,13 +348,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean    115.844676               0.0      0.071445\n",
-      "std      73.526664               0.0      0.026859\n",
-      "min       7.219464               0.0      0.056119\n",
-      "25%      50.514805               0.0      0.061333\n",
-      "50%     115.428330               0.0      0.062303\n",
-      "75%     150.220972               0.0      0.064135\n",
-      "max     498.093084               0.0      0.188381\n",
+      "mean    115.844676               0.0      0.067865\n",
+      "std      73.526664               0.0      0.022996\n",
+      "min       7.219464               0.0      0.057670\n",
+      "25%      50.514805               0.0      0.061275\n",
+      "50%     115.428330               0.0      0.062124\n",
+      "75%     150.220972               0.0      0.063087\n",
+      "max     498.093084               0.0      0.174450\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -282,16 +362,19 @@
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # solve\n",
     "    tick = time.time()\n",
     "    xval, objval = model_heur.solve(\"scip\")\n",
     "    tock = time.time()\n",
+    "    # eval\n",
     "    params.append(list(p)+list(a))\n",
     "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model_heur.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
@@ -308,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c3991fc7-8320-43ab-ac25-9bc8a6a759bd",
    "metadata": {},
    "outputs": [],
@@ -318,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4d916e20-f807-4728-9a24-0af68258539f",
    "metadata": {},
    "outputs": [
@@ -326,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [04:13<00:00,  3.95it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [04:12<00:00,  3.95it/s]\n"
      ]
     },
     {
@@ -335,13 +418,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      7.665065               0.0      0.252475\n",
-      "std      11.051759               0.0      0.502128\n",
-      "min       0.000007               0.0      0.059156\n",
-      "25%       0.420074               0.0      0.106874\n",
-      "50%       2.392478               0.0      0.188430\n",
-      "75%       9.561415               0.0      0.279285\n",
-      "max      57.349402               0.0     15.028886\n",
+      "mean      7.665065               0.0      0.252207\n",
+      "std      11.051759               0.0      0.437880\n",
+      "min       0.000007               0.0      0.060172\n",
+      "25%       0.420074               0.0      0.107373\n",
+      "50%       2.392478               0.0      0.199482\n",
+      "75%       9.561415               0.0      0.282476\n",
+      "max      57.349402               0.0     12.831389\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -349,16 +432,19 @@
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # solve\n",
     "    tick = time.time()\n",
     "    xval, objval = model_heur.solve(\"scip\")\n",
     "    tock = time.time()\n",
+    "    # eval\n",
     "    params.append(list(p)+list(a))\n",
     "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model_heur.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
@@ -375,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -391,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -421,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -480,7 +566,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -510,7 +596,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 305.07it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 439.66it/s]\n"
      ]
     },
     {
@@ -519,13 +605,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      4.408696          0.000151      0.002855\n",
-      "std       4.630498          0.002502      0.001063\n",
-      "min       0.018090          0.000000      0.000991\n",
-      "25%       1.199869          0.000000      0.002000\n",
-      "50%       2.534193          0.000000      0.003000\n",
-      "75%       6.262805          0.000000      0.003567\n",
-      "max      35.863158          0.064772      0.009398\n",
+      "mean      4.408696          0.000151      0.001988\n",
+      "std       4.630498          0.002502      0.000691\n",
+      "min       0.018090          0.000000      0.000943\n",
+      "25%       1.199869          0.000000      0.001597\n",
+      "50%       2.534193          0.000000      0.002000\n",
+      "75%       6.262805          0.000000      0.002013\n",
+      "max      35.863158          0.064772      0.006988\n",
       "Number of infeasible solution: 7\n"
      ]
     }
