--- a/Test Rosenbrock Easy.ipynb
+++ b/Test Rosenbrock Easy.ipynb
@@ -154,7 +154,7 @@
     "    tock = time.time()\n",
     "    # eval\n",
     "    params.append(list(p)+list(a))\n",
-    "    sols.append(list(xval.values()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
@@ -370,7 +370,7 @@
     "    tock = time.time()\n",
     "    # eval\n",
     "    params.append(list(p)+list(a))\n",
-    "    sols.append(list(xval.values()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model_heur.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
@@ -440,7 +440,7 @@
     "    tock = time.time()\n",
     "    # eval\n",
     "    params.append(list(p)+list(a))\n",
-    "    sols.append(list(xval.values()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model_heur.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
