--- a/Test Rosenbrock 50-2.ipynb
+++ b/Test Rosenbrock 50-2.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -511,66 +511,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 236.92\n",
-      "Epoch 1, Validation Loss: 97.35\n",
-      "Epoch 2, Validation Loss: 45.50\n",
-      "Epoch 3, Validation Loss: 39.71\n",
-      "Epoch 4, Validation Loss: 27.42\n",
-      "Epoch 5, Validation Loss: 43.97\n",
-      "Epoch 6, Validation Loss: 29.97\n",
-      "Epoch 7, Validation Loss: 30.24\n",
-      "Epoch 8, Validation Loss: 35.28\n",
-      "Epoch 9, Validation Loss: 24.37\n",
-      "Epoch 10, Validation Loss: 19.88\n",
-      "Epoch 11, Validation Loss: 18.00\n",
-      "Epoch 12, Validation Loss: 22.05\n",
-      "Epoch 13, Validation Loss: 18.49\n",
-      "Epoch 14, Validation Loss: 14.13\n",
-      "Epoch 15, Validation Loss: 15.39\n",
-      "Epoch 16, Validation Loss: 14.92\n",
-      "Epoch 17, Validation Loss: 15.40\n",
-      "Epoch 18, Validation Loss: 13.27\n",
-      "Epoch 19, Validation Loss: 11.59\n",
-      "Epoch 20, Validation Loss: 11.47\n",
-      "Epoch 21, Validation Loss: 11.91\n",
-      "Epoch 22, Validation Loss: 12.64\n",
-      "Epoch 23, Validation Loss: 11.13\n",
-      "Epoch 24, Validation Loss: 10.97\n",
-      "Epoch 25, Validation Loss: 14.67\n",
-      "Epoch 26, Validation Loss: 18.15\n",
-      "Epoch 27, Validation Loss: 12.42\n",
-      "Epoch 28, Validation Loss: 12.97\n",
-      "Epoch 29, Validation Loss: 13.14\n",
-      "Epoch 30, Validation Loss: 11.62\n",
-      "Epoch 31, Validation Loss: 12.27\n",
-      "Epoch 32, Validation Loss: 12.88\n",
-      "Epoch 33, Validation Loss: 11.09\n",
-      "Epoch 34, Validation Loss: 10.88\n",
-      "Epoch 35, Validation Loss: 11.43\n",
-      "Epoch 36, Validation Loss: 13.96\n",
-      "Epoch 37, Validation Loss: 11.35\n",
-      "Epoch 38, Validation Loss: 12.93\n",
-      "Epoch 39, Validation Loss: 10.33\n",
-      "Epoch 40, Validation Loss: 11.46\n",
-      "Epoch 41, Validation Loss: 13.87\n",
-      "Epoch 42, Validation Loss: 10.39\n",
-      "Epoch 43, Validation Loss: 11.21\n",
-      "Epoch 44, Validation Loss: 12.33\n",
-      "Epoch 45, Validation Loss: 11.59\n",
-      "Epoch 46, Validation Loss: 11.30\n",
-      "Epoch 47, Validation Loss: 14.02\n",
-      "Epoch 48, Validation Loss: 13.00\n",
-      "Epoch 49, Validation Loss: 12.15\n",
-      "Epoch 50, Validation Loss: 12.02\n",
-      "Epoch 51, Validation Loss: 12.71\n",
-      "Epoch 52, Validation Loss: 11.06\n",
-      "Epoch 53, Validation Loss: 14.00\n",
-      "Epoch 54, Validation Loss: 10.97\n",
-      "Epoch 55, Validation Loss: 12.30\n",
-      "Epoch 56, Validation Loss: 13.34\n",
-      "Epoch 57, Validation Loss: 11.80\n",
-      "Epoch 58, Validation Loss: 14.57\n",
-      "Early stopping at epoch 58\n",
+      "Epoch 0, Validation Loss: 303.71\n",
+      "Epoch 1, Validation Loss: 60.11\n",
+      "Epoch 2, Validation Loss: 47.18\n",
+      "Epoch 3, Validation Loss: 27.07\n",
+      "Epoch 4, Validation Loss: 29.75\n",
+      "Epoch 5, Validation Loss: 26.36\n",
+      "Epoch 6, Validation Loss: 29.61\n",
+      "Epoch 7, Validation Loss: 24.70\n",
+      "Epoch 8, Validation Loss: 21.45\n",
+      "Epoch 9, Validation Loss: 18.96\n",
+      "Epoch 10, Validation Loss: 18.91\n",
+      "Epoch 11, Validation Loss: 16.38\n",
+      "Epoch 12, Validation Loss: 15.42\n",
+      "Epoch 13, Validation Loss: 15.13\n",
+      "Epoch 14, Validation Loss: 16.00\n",
+      "Epoch 15, Validation Loss: 14.66\n",
+      "Epoch 16, Validation Loss: 13.11\n",
+      "Epoch 17, Validation Loss: 13.87\n",
+      "Epoch 18, Validation Loss: 12.45\n",
+      "Epoch 19, Validation Loss: 12.49\n",
+      "Epoch 20, Validation Loss: 12.89\n",
+      "Epoch 21, Validation Loss: 11.60\n",
+      "Epoch 22, Validation Loss: 12.32\n",
+      "Epoch 23, Validation Loss: 18.30\n",
+      "Epoch 24, Validation Loss: 12.62\n",
+      "Epoch 25, Validation Loss: 14.17\n",
+      "Epoch 26, Validation Loss: 11.86\n",
+      "Epoch 27, Validation Loss: 12.30\n",
+      "Epoch 28, Validation Loss: 13.54\n",
+      "Epoch 29, Validation Loss: 12.34\n",
+      "Epoch 30, Validation Loss: 13.38\n",
+      "Epoch 31, Validation Loss: 12.13\n",
+      "Epoch 32, Validation Loss: 11.72\n",
+      "Epoch 33, Validation Loss: 12.10\n",
+      "Epoch 34, Validation Loss: 11.47\n",
+      "Epoch 35, Validation Loss: 12.20\n",
+      "Epoch 36, Validation Loss: 10.95\n",
+      "Epoch 37, Validation Loss: 9.44\n",
+      "Epoch 38, Validation Loss: 11.65\n",
+      "Epoch 39, Validation Loss: 12.19\n",
+      "Epoch 40, Validation Loss: 10.56\n",
+      "Epoch 41, Validation Loss: 10.12\n",
+      "Epoch 42, Validation Loss: 13.26\n",
+      "Epoch 43, Validation Loss: 9.77\n",
+      "Epoch 44, Validation Loss: 10.98\n",
+      "Epoch 45, Validation Loss: 10.42\n",
+      "Epoch 46, Validation Loss: 10.25\n",
+      "Epoch 47, Validation Loss: 10.77\n",
+      "Epoch 48, Validation Loss: 10.23\n",
+      "Epoch 49, Validation Loss: 11.66\n",
+      "Epoch 50, Validation Loss: 15.76\n",
+      "Epoch 51, Validation Loss: 11.08\n",
+      "Epoch 52, Validation Loss: 8.85\n",
+      "Epoch 53, Validation Loss: 11.81\n",
+      "Epoch 54, Validation Loss: 10.51\n",
+      "Epoch 55, Validation Loss: 15.73\n",
+      "Epoch 56, Validation Loss: 17.30\n",
+      "Epoch 57, Validation Loss: 10.96\n",
+      "Epoch 58, Validation Loss: 9.92\n",
+      "Epoch 59, Validation Loss: 12.25\n",
+      "Epoch 60, Validation Loss: 9.39\n",
+      "Epoch 61, Validation Loss: 16.64\n",
+      "Epoch 62, Validation Loss: 10.97\n",
+      "Epoch 63, Validation Loss: 10.31\n",
+      "Epoch 64, Validation Loss: 10.55\n",
+      "Epoch 65, Validation Loss: 11.38\n",
+      "Epoch 66, Validation Loss: 9.28\n",
+      "Epoch 67, Validation Loss: 11.25\n",
+      "Epoch 68, Validation Loss: 10.89\n",
+      "Epoch 69, Validation Loss: 10.70\n",
+      "Epoch 70, Validation Loss: 12.73\n",
+      "Epoch 71, Validation Loss: 10.68\n",
+      "Early stopping at epoch 71\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -591,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -599,7 +612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:01<00:00, 776.82it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:01<00:00, 794.27it/s]\n"
      ]
     },
     {
@@ -608,13 +621,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean     10.203909               0.0      0.000789\n",
-      "std       6.058286               0.0      0.000494\n",
-      "min       0.029334               0.0      0.000000\n",
-      "25%       5.723123               0.0      0.000504\n",
-      "50%       9.269333               0.0      0.001000\n",
-      "75%      13.477760               0.0      0.001005\n",
-      "max      40.885370               0.0      0.002537\n",
+      "mean      8.532119               0.0      0.000771\n",
+      "std       7.696579               0.0      0.000533\n",
+      "min       0.048154               0.0      0.000000\n",
+      "25%       2.947259               0.0      0.000000\n",
+      "50%       6.088938               0.0      0.001000\n",
+      "75%      11.753885               0.0      0.001000\n",
+      "max      48.586977               0.0      0.002522\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -663,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -679,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -705,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -713,104 +726,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 237.28\n",
-      "Epoch 1, Validation Loss: 105.70\n",
-      "Epoch 2, Validation Loss: 49.25\n",
-      "Epoch 3, Validation Loss: 46.83\n",
-      "Epoch 4, Validation Loss: 46.95\n",
-      "Epoch 5, Validation Loss: 45.07\n",
-      "Epoch 6, Validation Loss: 45.90\n",
-      "Epoch 7, Validation Loss: 44.41\n",
-      "Epoch 8, Validation Loss: 46.07\n",
-      "Epoch 9, Validation Loss: 45.41\n",
-      "Epoch 10, Validation Loss: 49.55\n",
-      "Epoch 11, Validation Loss: 44.50\n",
-      "Epoch 12, Validation Loss: 45.36\n",
-      "Epoch 13, Validation Loss: 45.03\n",
-      "Epoch 14, Validation Loss: 44.98\n",
-      "Epoch 15, Validation Loss: 44.21\n",
-      "Epoch 16, Validation Loss: 44.83\n",
-      "Epoch 17, Validation Loss: 44.98\n",
-      "Epoch 18, Validation Loss: 44.27\n",
-      "Epoch 19, Validation Loss: 43.88\n",
-      "Epoch 20, Validation Loss: 44.21\n",
-      "Epoch 21, Validation Loss: 45.72\n",
-      "Epoch 22, Validation Loss: 45.81\n",
-      "Epoch 23, Validation Loss: 44.66\n",
-      "Epoch 24, Validation Loss: 47.19\n",
-      "Epoch 25, Validation Loss: 40.74\n",
-      "Epoch 26, Validation Loss: 31.16\n",
-      "Epoch 27, Validation Loss: 30.69\n",
-      "Epoch 28, Validation Loss: 31.74\n",
-      "Epoch 29, Validation Loss: 30.33\n",
-      "Epoch 30, Validation Loss: 28.37\n",
-      "Epoch 31, Validation Loss: 27.49\n",
-      "Epoch 32, Validation Loss: 25.50\n",
-      "Epoch 33, Validation Loss: 25.59\n",
-      "Epoch 34, Validation Loss: 22.61\n",
-      "Epoch 35, Validation Loss: 23.24\n",
-      "Epoch 36, Validation Loss: 29.32\n",
-      "Epoch 37, Validation Loss: 20.07\n",
-      "Epoch 38, Validation Loss: 11.81\n",
-      "Epoch 39, Validation Loss: 13.69\n",
-      "Epoch 40, Validation Loss: 25.87\n",
-      "Epoch 41, Validation Loss: 12.06\n",
-      "Epoch 42, Validation Loss: 13.68\n",
-      "Epoch 43, Validation Loss: 11.67\n",
-      "Epoch 44, Validation Loss: 10.98\n",
-      "Epoch 45, Validation Loss: 13.13\n",
-      "Epoch 46, Validation Loss: 11.33\n",
-      "Epoch 47, Validation Loss: 11.08\n",
-      "Epoch 48, Validation Loss: 11.75\n",
-      "Epoch 49, Validation Loss: 11.30\n",
-      "Epoch 50, Validation Loss: 11.16\n",
-      "Epoch 51, Validation Loss: 12.16\n",
-      "Epoch 52, Validation Loss: 15.61\n",
-      "Epoch 53, Validation Loss: 16.77\n",
-      "Epoch 54, Validation Loss: 13.87\n",
-      "Epoch 55, Validation Loss: 12.63\n",
-      "Epoch 56, Validation Loss: 12.66\n",
-      "Epoch 57, Validation Loss: 13.18\n",
-      "Epoch 58, Validation Loss: 11.96\n",
-      "Epoch 59, Validation Loss: 13.18\n",
-      "Epoch 60, Validation Loss: 12.31\n",
-      "Epoch 61, Validation Loss: 10.90\n",
-      "Epoch 62, Validation Loss: 11.90\n",
-      "Epoch 63, Validation Loss: 14.75\n",
-      "Epoch 64, Validation Loss: 15.37\n",
-      "Epoch 65, Validation Loss: 11.45\n",
-      "Epoch 66, Validation Loss: 12.95\n",
-      "Epoch 67, Validation Loss: 11.18\n",
-      "Epoch 68, Validation Loss: 14.91\n",
-      "Epoch 69, Validation Loss: 12.50\n",
-      "Epoch 70, Validation Loss: 13.36\n",
-      "Epoch 71, Validation Loss: 14.99\n",
-      "Epoch 72, Validation Loss: 11.42\n",
-      "Epoch 73, Validation Loss: 12.06\n",
-      "Epoch 74, Validation Loss: 11.89\n",
-      "Epoch 75, Validation Loss: 14.60\n",
-      "Epoch 76, Validation Loss: 11.42\n",
-      "Epoch 77, Validation Loss: 11.22\n",
-      "Epoch 78, Validation Loss: 12.89\n",
-      "Epoch 79, Validation Loss: 10.78\n",
-      "Epoch 80, Validation Loss: 12.08\n",
-      "Epoch 81, Validation Loss: 12.43\n",
-      "Epoch 82, Validation Loss: 11.31\n",
-      "Epoch 83, Validation Loss: 12.83\n",
-      "Epoch 84, Validation Loss: 13.86\n",
-      "Epoch 85, Validation Loss: 13.06\n",
-      "Epoch 86, Validation Loss: 12.60\n",
-      "Epoch 87, Validation Loss: 12.78\n",
-      "Epoch 88, Validation Loss: 12.27\n",
-      "Epoch 89, Validation Loss: 12.72\n",
-      "Epoch 90, Validation Loss: 12.45\n",
-      "Epoch 91, Validation Loss: 12.43\n",
-      "Epoch 92, Validation Loss: 11.86\n",
-      "Epoch 93, Validation Loss: 12.46\n",
-      "Epoch 94, Validation Loss: 11.53\n",
-      "Epoch 95, Validation Loss: 11.38\n",
-      "Epoch 96, Validation Loss: 11.69\n",
-      "Epoch 97, Validation Loss: 12.76\n"
+      "Epoch 0, Validation Loss: 238.91\n",
+      "Epoch 1, Validation Loss: 34.20\n",
+      "Epoch 2, Validation Loss: 17.75\n",
+      "Epoch 3, Validation Loss: 20.35\n",
+      "Epoch 4, Validation Loss: 18.31\n",
+      "Epoch 5, Validation Loss: 15.81\n",
+      "Epoch 6, Validation Loss: 12.73\n",
+      "Epoch 7, Validation Loss: 18.15\n",
+      "Epoch 8, Validation Loss: 14.26\n",
+      "Epoch 9, Validation Loss: 13.26\n",
+      "Epoch 10, Validation Loss: 15.04\n",
+      "Epoch 11, Validation Loss: 13.86\n",
+      "Epoch 12, Validation Loss: 13.40\n",
+      "Epoch 13, Validation Loss: 12.56\n",
+      "Epoch 14, Validation Loss: 15.41\n",
+      "Epoch 15, Validation Loss: 12.95\n",
+      "Epoch 16, Validation Loss: 13.30\n",
+      "Epoch 17, Validation Loss: 14.26\n",
+      "Epoch 18, Validation Loss: 12.86\n",
+      "Epoch 19, Validation Loss: 12.58\n",
+      "Epoch 20, Validation Loss: 12.59\n",
+      "Epoch 21, Validation Loss: 12.52\n",
+      "Epoch 22, Validation Loss: 12.64\n",
+      "Epoch 23, Validation Loss: 17.13\n",
+      "Epoch 24, Validation Loss: 12.58\n",
+      "Epoch 25, Validation Loss: 12.49\n",
+      "Epoch 26, Validation Loss: 13.01\n",
+      "Epoch 27, Validation Loss: 14.26\n",
+      "Epoch 28, Validation Loss: 13.51\n",
+      "Epoch 29, Validation Loss: 13.76\n",
+      "Epoch 30, Validation Loss: 21.63\n",
+      "Epoch 31, Validation Loss: 13.13\n",
+      "Epoch 32, Validation Loss: 12.10\n",
+      "Epoch 33, Validation Loss: 12.60\n",
+      "Epoch 34, Validation Loss: 12.29\n",
+      "Epoch 35, Validation Loss: 12.94\n",
+      "Epoch 36, Validation Loss: 13.04\n",
+      "Epoch 37, Validation Loss: 13.50\n",
+      "Epoch 38, Validation Loss: 12.62\n",
+      "Epoch 39, Validation Loss: 11.82\n",
+      "Epoch 40, Validation Loss: 11.69\n",
+      "Epoch 41, Validation Loss: 11.72\n",
+      "Epoch 42, Validation Loss: 11.63\n",
+      "Epoch 43, Validation Loss: 12.05\n",
+      "Epoch 44, Validation Loss: 13.35\n",
+      "Epoch 45, Validation Loss: 12.86\n",
+      "Epoch 46, Validation Loss: 11.12\n",
+      "Epoch 47, Validation Loss: 15.87\n",
+      "Epoch 48, Validation Loss: 11.62\n",
+      "Epoch 49, Validation Loss: 15.31\n",
+      "Epoch 50, Validation Loss: 13.67\n",
+      "Epoch 51, Validation Loss: 13.00\n",
+      "Epoch 52, Validation Loss: 12.25\n",
+      "Epoch 53, Validation Loss: 13.66\n",
+      "Epoch 54, Validation Loss: 12.69\n",
+      "Epoch 55, Validation Loss: 14.18\n",
+      "Epoch 56, Validation Loss: 12.12\n",
+      "Epoch 57, Validation Loss: 13.55\n",
+      "Epoch 58, Validation Loss: 12.80\n",
+      "Epoch 59, Validation Loss: 12.57\n",
+      "Epoch 60, Validation Loss: 11.97\n",
+      "Epoch 61, Validation Loss: 12.87\n",
+      "Epoch 62, Validation Loss: 13.28\n",
+      "Epoch 63, Validation Loss: 12.78\n",
+      "Epoch 64, Validation Loss: 12.23\n",
+      "Epoch 65, Validation Loss: 12.92\n",
+      "Early stopping at epoch 65\n",
+      "Best model loaded.\n",
+      "Training complete.\n"
      ]
     }
    ],
@@ -829,10 +813,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:01<00:00, 686.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     11.760018          0.000318      0.000893\n",
+      "std       8.256438          0.003896      0.000603\n",
+      "min       0.025281          0.000000      0.000000\n",
+      "25%       4.992462          0.000000      0.000504\n",
+      "50%       9.755346          0.000000      0.001000\n",
+      "75%      17.566854          0.000000      0.001006\n",
+      "max      45.645138          0.075537      0.003232\n",
+      "Number of infeasible solution: 9\n"
+     ]
+    }
+   ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test,a_test))):\n",
